--- a/tensorflow/ubuntu-16.04/Dockerfile
+++ b/tensorflow/ubuntu-16.04/Dockerfile
@@ -7,6 +7,7 @@ RUN apt update && apt install -y \
     wget \
     libjpeg-dev \
     openjdk-8-jdk \
+    libcupti-dev \
     && rm -rf /var/lib/lists/*
 
 # Install Anaconda
